# fairstream

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
doc/: .gitignore  scenario.drawio
scripts/: run_eval_heuristics.sh  run_train_selected_ppo_500.sh  train_full.sh  train_tiny.sh
src/: env.py  eval_function.py  example.py  main.py  metric_callback.py  minerva.py  model.py  mpd.py  policies.py  quality.py  session.py
src/plots/: barplot.py  coeff.py  constants.py  greedy_comparison.py  lineplot.py  matplotlib_settings.py  pareto.py  plot_fairness.py  plot_qualities.py  ppo_details.py  single_episode.py  table.py  util.py
src/traces/: cook.py  load.py
src/util/point_cloud_qoe/: README.md  get_point_cloud_qualities.py
src/util/vmaf/: README.md  calculate_vmaf.sh  encode_video.sh  generate_paper_videos.sh  generate_paper_vmafs.sh  process_vmafs.py  vmaf_to_csv.py  vmafs.csv  vmafs_processed_best.csv
